# filesearch

./: CMakeLists.txt  Makefile  README.md
qml/: main.qml
qml/ai-chat/: index.html
qml/components/: AIChatPanel.qml  ActionBar.qml  ActionButton.qml  CategoryBlocksView.qml  ChatMessage.qml  ColHeader.qml  DuplicateFilePage.qml  FavoritesPage.qml  FileCleanupPage.qml  FileListPanel.qml  FileRowDelegate.qml  FilelightDiskView.qml  FilelightPage.qml  FilelightSegmentShape.qml  FilterChip.qml  FilterPopMenu.qml  HistoryPage.qml  LegendItem.qml  LegendView.qml  NavIcon.qml  RadialMapView.qml  SearchBar.qml  SearchIcon.qml  SettingsDialog.qml  Sidebar.qml  StatusBar.qml  StatusItem.qml  ThemeModeButton.qml  TitleBar.qml  ToolStatusRow.qml  TreeMapCell.qml  TreeMapView.qml  VizPanel.qml  VizTab.qml  qmldir
qml/theme/: AppController.qml  ChatHistoryContext.qml  CleanupContext.qml  DuplicateContext.qml  FavoriteSkillsContext.qml  FilelightContext.qml  Theme.qml  qmldir
src/: AppSettings.cpp  AppSettings.h  PathProvider.cpp  PathProvider.h  StatusContext.cpp  StatusContext.h  main.cpp
src/agent/: AIBridge.cpp  AIBridge.h  ChatBridge.cpp  ChatBridge.h  ContextBuilder.cpp  ContextBuilder.h  ToolExecutor.cpp  ToolExecutor.h
src/agent/tools/: DeleteFilesTool.cpp  DeleteFilesTool.h  IAgentTool.h  MoveFilesTool.cpp  MoveFilesTool.h  SearchFilesTool.cpp  SearchFilesTool.h  ShellTool.cpp  ShellTool.h  WebSearchTool.cpp  WebSearchTool.h
src/engine/: CleanupEngine.cpp  CleanupEngine.h  CleanupWorker.cpp  CleanupWorker.h  DuplicateEngine.cpp  DuplicateEngine.h  DuplicateWorker.cpp  DuplicateWorker.h  IndexEngine.cpp  IndexEngine.h  ScanEngine.cpp  ScanEngine.h  ScanWorker.cpp  ScanWorker.h  SearchEngine.cpp  SearchEngine.h
src/model/: FileItemModel.cpp  FileItemModel.h  UnifiedFileRecord.h
src/service/: FileOperationService.cpp  FileOperationService.h
